@@ -1,4 +1,14 @@
-2003-05-22  John Kirkland <jpk@bl.org> 1.3.4-cvsb35
+2003-05-23  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b36
+
+	* Updated copyrights/$GALLERY_BASEDIR fix for extra fields code.
+
+	* Added "jpeg" to acceptable image tag list (alongside "jpg").
+
+	* Fixed error in ImageMagick "convert" call where some shells
+	  would expand the '*' from the '+profile' flag, breaking image
+	  uploads. (Bug #703641)
+
+2003-05-22  John Kirkland  <jpk@bl.org> 1.3.4-cvs-b35
 
 	* Rewrote printAlbumOptionList and printNestedVals in util.php
 	  to conform to the requirements that I added as code comments
